# sam_train_backend

./: .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  load_mlflow_model.py  publish.py  pyproject.toml
app/: __init__.py  main.py
app/configs/: bot.py  config.py  gql.py  minio.py
app/routers/v1/: endpoints.py  model_router.py
app/schemas/bot/: bot.py  enum.py
app/schemas/gql/: mutation.py  type_input_mixin.py
app/schemas/gql/mutations/: model.py
app/schemas/pydantic/: shared.py
app/segment_anything/: automatic_mask_generator.py  lora.py  predictor.py
app/segment_anything/modeling/: mask_decoder.py  sam.py  transformer.py
app/segment_anything/utils/: amg.py  onnx.py  transforms.py
app/services/: model_service.py
